syntax = "proto3";

package server;

option go_package = "golang-grpc/proto";

import "google/api/annotations.proto";

message Country {
    int64 id = 1;
    string name = 2;
    int64 peopleNumber = 3;
}

message CreateRequest {
    string api = 1;
    Country country = 2;
}

message CreateResponse {
    string api = 1;
    int64 id = 2;
}

message ReadRequest {
    string api = 1;
    int64 id = 2;
}

message ReadResponse {
    string api = 1;
    Country country = 2;
}

message UpdateRequest {
    string api = 1;
    Country country = 2;
    int64 id = 3;
}

message UpdateResponse {
    string api = 1;
    int64 updated = 2;
}

message DeleteRequest {
    string api = 1;
    int64 id = 2;
}

message DeleteResponse {
    string api = 1;
    int64 deleted = 2;
}

message ReadAllRequest {
    string api = 1;
}

message ReadAllResponse {
    string api = 1;
    repeated Country country = 2;
}

service Countries {
    rpc ReadAll (ReadAllRequest) returns (ReadAllResponse) {
        option (google.api.http) = {
            get:"/api/v1/countries"
        };
    }
    rpc Create (CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post:"/api/v1/countries"
            body: "*"
        };
    }
    rpc Read (ReadRequest) returns (ReadResponse) {
        option (google.api.http) = {
            get:"/api/v1/countries/{id}"
        };
    }
    rpc Update (UpdateRequest) returns (UpdateResponse) {
        option (google.api.http) = {
            put:"/api/v1/countries/{id}"
            body: "*"
        };
    }
    rpc Delete (DeleteRequest) returns (DeleteResponse) {
        option (google.api.http) = {
            delete:"/api/v1/countries/{id}"
        };
    }
}
